# benchmark

./: .gitignore  CMakeLists.txt
data/: cuda.txt  hip.txt
src/: bench-acpp.hpp  bench-kokkos.hpp  benchmark.cpp  tools.hpp
